# action-bot

./: .env.example  .prettierignore  .prettierrc.json  AGENT_RULES.md  CONTRIBUTING.md  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: auto-video-factory.yml
apps/ai-logic/: package.json  pyproject.toml  requirements.txt
apps/ai-logic/src/: __init__.py  gemini_client.py  main.py  schemas.py
apps/api/: HOW_TO.md  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/database/: database.service.ts
apps/api/src/jobs/: jobs.controller.spec.ts  jobs.controller.ts  jobs.module.ts  jobs.service.spec.ts  jobs.service.ts  scripts.controller.ts
apps/api/test/: app.e2e-spec.ts
apps/dashboard/: package.json  tsconfig.json
apps/orchestrator/: .eslintrc.json  package.json  tsconfig.json
apps/orchestrator/src/: index.ts  run.ts
apps/orchestrator/src/services/: ai-logic.service.ts  google-sheets.service.ts  s3.service.ts  video-engine.service.ts
apps/video-engine/: package.json  pyproject.toml  requirements.txt
apps/video-engine/src/: __init__.py  main.py  video_assembler.py
apps/web/: HOW_TO.md  package.json
apps/web/app/: page.tsx
apps/web/app/lib/: api-client.ts  demo.spec.ts  types.ts
docs/: CURRENT_STATUS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LOCAL_CONTENT_STRATEGY.md  MULTIDIMENSIONAL_EXPANSION_PLAN.md  PROJECT_PLAN.md  RISK_MITIGATION_STRATEGY.md  TECH_BUSINESS_REVIEW.md  TESTING.md  TREND_FINDER_FEATURE_PLAN.md  TROUBLESHOOTING.md  VIDEO_FACTORY_FLOW.md
scripts/: setup.js
(+3 files in other folders)
